# afb-jscli

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README  afb-jscli.c  demo-redis-modbus.js  demo-redis-redis.js  demo-redis.js  essai-client.js  essai-server.js  essai.js  re-essai.js  run-test.sh  testglobal.js  tsys.js
demos/: demo-redis-modbus.js  essai-client.js  run-test.sh
modules/: diag.js  libafbws.js  system.js
modules/afb/: .gitignore  afb-qjs.c  afbwsapi-qjs.c  afbwsj1-qjs.c  index.js
